force-app/main/default/objects/Approved_Offer__c/Approved_Offer__c.object-meta.xml
<CustomObject>
    <label>Approved Offer</label>
    <nameField>
        <label>Approved Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approved Offer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>