force-app/main/default/objects/Approved_Offer__c/fields/Above_prime_max__c.field-meta.xml
<CustomField>
    <fullName>Above_prime_max__c</fullName>
    <label>Above prime max</label>
    <length>255</length>
    <type>Text</type>
</CustomField>