force-app/main/default/objects/Approved_Offer__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Approved Offer</relationshipLabel>
    <relationshipName>Approved_Offer</relationshipName>
    <type>Lookup</type>
</CustomField>