force-app/main/default/objects/Approved_Offer__c/fields/APR__c.field-meta.xml
<CustomField>
    <fullName>APR__c</fullName>
    <label>APR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>