force-app/main/default/objects/Approved_Offer__c/fields/EBP_Offer_Code__c.field-meta.xml
<CustomField>
    <fullName>EBP_Offer_Code__c</fullName>
    <label>EBP_Offer_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>