force-app/main/default/objects/Approved_Offer__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <label>Interest Rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>