force-app/main/default/objects/Approved_Offer__c/fields/Origination_fee__c.field-meta.xml
<CustomField>
    <fullName>Origination_fee__c</fullName>
    <label>Origination fee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>