force-app/main/default/objects/Approved_Offer__c/fields/Pricing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier__c</fullName>
    <label>Pricing Tier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>